--- a/data/veerwolf_nexys_video_program.cfg
+++ b/data/veerwolf_nexys_video_program.cfg
@@ -14,7 +14,7 @@ source [find cpld/jtagspi.cfg]
 if { [info exists BITFILE] } {
 	set _BITFILE $BITFILE
 } else {
-	set _BITFILE build/veerwolf_0/nexys_video-vivado/veerwolf_0.bit
+	set _BITFILE build/veerwolf_0.7.5/nexys_video-vivado/veerwolf_0.7.5.bit
 }
 
 init
